# drf-pytest-starter

./: .env  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  docker-compose.yml  pgadmin-servers.json  prepare-dev.sh  pyproject.toml
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/src/: Dockerfile  manage.py
backend/src/config/: settings.py  urls.py
backend/src/css/: styles.css
backend/src/example_app/: models.py  serializers.py  urls.py  views.py
backend/src/example_app/migrations/: 0001_initial.py
backend/src/templates/: base.html  profile.html
backend/src/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
backend/templates/: base.html
backend/test/: conftest.py  requirements.txt
backend/test/example_app/: test_views.py
env/: local.env
frontend/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.jsx  Car.jsx  Memo.jsx  Todos.jsx  index.js  my-style.module.scss
frontend/src/pages/: Home.jsx  Layout.jsx  NoPage.jsx
src/: Dockerfile  manage.py  requirements.txt
src/config/: settings.py
test/: requirements.txt
test/shop/: test_views.py
